# findfileconflicts

./: README.md  meson.build
data/: com.github.artemanufrij.findfileconflicts.appdata.xml  com.github.artemanufrij.findfileconflicts.appdata.xml.in  com.github.artemanufrij.findfileconflicts.desktop.in  com.github.artemanufrij.graphui.appdata.xml  meson.build
debian/: changelog  control  copyright  rules
examples/: Calculation.ods  template.odt
po/: POTFILES  aa.po  ab.po  ae.po  af.po  ak.po  am.po  an.po  ar.po  as.po  ast.po  av.po  ay.po  az.po  ba.po  be.po  bg.po  bh.po  bi.po  bm.po  bn.po  bo.po  br.po  bs.po  ca.po  ce.po  ch.po  ckb.po  co.po  com.github.artemanufrij.findfileconflicts.pot  cr.po  cs.po  cu.po  cv.po  cy.po  da.po  de.po  dv.po  dz.po  ee.po  (+158 more)
po/extra/: POTFILES  aa.po  ab.po  ae.po  af.po  ak.po  am.po  an.po  ar.po  as.po  ast.po  av.po  ay.po  az.po  ba.po  be.po  bg.po  bh.po  bi.po  bm.po  bn.po  bo.po  br.po  bs.po  ca.po  ce.po  ch.po  ckb.po  co.po  cr.po  cs.po  cu.po  cv.po  cy.po  da.po  de.po  dv.po  dz.po  ee.po  el.po  (+157 more)
schemas/: com.github.artemanufrij.findfileconflicts.gschema.xml
src/: Application.vala  MainWindow.vala  Settings.vala  meson.build
src/Dialogs/: Preferences.vala
src/Interfaces/: IConflict.vala
src/Objects/: LocalFile.vala
src/Services/: LibraryManager.vala  LocalFilesManager.vala
src/Utils/: Utils.vala
src/Widgets/: FileConflict.vala  FilesConflict.vala  IllegalFile.vala  LocalFile.vala
src/Widgets/Views/: Conflicts.vala  Welcome.vala
