sources = files(
    'Application.vala',
    'MainWindow.vala',
    'Settings.vala',
    'Interfaces/IConflict.vala',
    'Objects/LocalFile.vala',
    'Services/LocalFilesManager.vala',
    'Services/LibraryManager.vala',
    'Dialogs/Preferences.vala',
    'Widgets/LocalFile.vala',
    'Widgets/FilesConflict.vala',
    'Widgets/IllegalFile.vala',
    'Widgets/Views/Conflicts.vala',
    'Widgets/Views/Welcome.vala',
    'Utils/Utils.vala'
)